--- a/diabetes.Rmd
+++ b/diabetes.Rmd
@@ -21,14 +21,50 @@ knitr::opts_chunk$set(echo = FALSE)
 
 hmc_iters <- 7000
 do_ppc_checks <- FALSE
+do_loo <- FALSE
 ```
 
 
 ```{r}
-cd4_all <-
+clinical_data <- read_csv(here::here("private_data/clinical_md_for_bayes.csv"),
+                          col_types = cols(
+  Patient_ID = col_integer(),
+  Time = col_character(),
+  bmi_man = col_double(),
+  hba1c_man = col_double(),
+  ph_man = col_double(),
+  dq2_8 = col_character(),
+  risk_hla = col_double(),
+  c_peptide_change = col_double(),
+  c_peptide_change_perc = col_double(),
+  gad_man = col_double(),
+  iaa_man = col_double(),
+  ia2_man = col_double(),
+  znt8_man = col_double(),
+  idaa1c = col_double(),
+  wbc = col_double(),
+  lymph_abs = col_double(),
+  mon_abs = col_double(),
+  neutr_abs = col_double(),
+  eoz_abs = col_double(),
+  baz_abs = col_double(),
+  lymph_perc = col_double(),
+  mon_perc = col_double(),
+  neutr_perc = col_double(),
+  eoz_perc = col_double(),
+  baz_perc = col_double(),
+  tdd_per_kg_1 = col_double()
+))
+```
+
+
+```{r}
+cd4_all_with_preliminary <-
   read_csv(
-    here::here("private_data/all_levels_counts_cd4.csv"),
+    #here::here("private_data/all_levels_counts_cd4.csv"),
+    here::here("private_data/all_levels_counts_with_preliminary_cd4.csv"),
     col_types = cols(
+      ...1 = col_skip(),
       Sample_ID = col_character(),
       annotations = col_character(),
       n = col_integer(),
@@ -42,17 +78,20 @@ cd4_all <-
       Time = col_character(),
       Experiment_ID = col_character(),
       Level = col_character()
-    )
+    ) 
   ) %>%
   separate(annotations, into = c("L1", "L2", "L3", "Marker_genes"), sep = "---|: ", fill = "right") %>%
   mutate(Name = case_when(!is.na(L3) ~ L3,
                           !is.na(L2) ~ L2,
-                          TRUE ~ L1))
+                          TRUE ~ L1),
+         isPreliminary = Experiment_ID %in% c("Exp08", "Exp10", "Exp11"))
+
+cd4_all <- cd4_all_with_preliminary %>% filter(!isPreliminary) %>% select(-isPreliminary)
 ```
 
 
 ```{r}
-cd4_all_prop <- cd4_all %>% 
+cd4_all_prop_with_preliminary <- cd4_all_with_preliminary %>% 
   group_by(Sample_ID, Level) %>%
   mutate(sum_parent = if_else(Level == "L1", sum(n), NA_real_),
          sum_all = sum(n)) %>%
@@ -67,17 +106,17 @@ cd4_all_prop <- cd4_all %>%
                                   Level == "L2" ~ L1,
                                   Level == "L3" ~ L2))
 
-stopifnot(all(!is.na(cd4_all_prop$sum_parent)))
-stopifnot(all(!is.na(cd4_all_prop$parent_level)))
+stopifnot(all(!is.na(cd4_all_prop_with_preliminary$sum_parent)))
+stopifnot(all(!is.na(cd4_all_prop_with_preliminary$parent_level)))
 
-prop_sums_bad <- cd4_all_prop %>%
+prop_sums_bad <- cd4_all_prop_with_preliminary %>%
   group_by(Sample_ID, Level, parent_level) %>%
   summarise(prop_sum = sum(prop_parent), .groups = "drop") %>%
   filter(abs(prop_sum - 1) > 1e-5)
 
 stopifnot(nrow(prop_sums_bad) == 0)
 
-sums_all_bad <- cd4_all_prop %>%
+sums_all_bad <- cd4_all_prop_with_preliminary %>%
   group_by(Sample_ID, sum_all) %>%
   tally() %>%
   group_by(Sample_ID) %>%
@@ -85,6 +124,7 @@ sums_all_bad <- cd4_all_prop %>%
 
 stopifnot(nrow(sums_all_bad) == 0)
 
+cd4_all_prop <- cd4_all_prop_with_preliminary %>% filter(!isPreliminary) %>% select(-isPreliminary)
 
 ```
 
@@ -149,6 +189,189 @@ cd4_l3 %>% group_by(Sample_ID) %>%
   summarise(n_cells = sum(n)) %>%
   ggplot(aes(n_cells)) + geom_histogram(binwidth = 100)
 ```
+
+### Recalibrating the naive population
+
+```{r}
+cd4_preliminary_comparison <- cd4_all_prop_with_preliminary %>% 
+  mutate(isPreliminary = if_else(isPreliminary, "preliminary", "final")) %>%
+  pivot_wider(names_from = isPreliminary, values_from = c("Sample_ID", "Experiment_ID", "n", "sum_parent", "sum_all", "prop_parent", "prop_all")) %>%
+  filter(!is.na(Sample_ID_preliminary))
+
+stopifnot(!any(is.na(cd4_preliminary_comparison$Sample_ID_final)))
+#stopifnot(length(unique(cd4_preliminary_comparison$Patient_ID)) == 9)
+```
+
+```{r}
+cd4_preliminary_comparison %>% filter(Level == "L2") %>%
+  mutate(group = if_else(L2 == "Naive", "Naive", "Other")) %>%
+  ggplot(aes(x = prop_all_preliminary, y = prop_all_final)) + 
+  geom_smooth(method = "lm", formula = y ~ x) + 
+  geom_point(aes(color = L2)) +
+  facet_wrap(~group, scale = "free")
+
+```
+
+```{r}
+cd4_preliminary_comparison_l2 <- cd4_preliminary_comparison %>% 
+  filter(Level == "L2") %>%
+  group_by(Patient_ID, Condition) %>%
+  mutate(fold_change = ((n_final + 1) / sum_all_final) /   ((n_preliminary + 1) / sum_all_preliminary),
+         perturbation_change = fold_change / sum(fold_change)
+         #alr_perturbation_change = log(perturbation_change / perturbation_change[L2 == "Naive"]),
+         #clr_perturbation_change = log(perturbation_change / exp(mean(log(perturbation_change))))
+         )
+
+cd4_preliminary_comparison_l2 %>%
+  ggplot(aes(x = L2, y = fold_change, color = Condition)) + 
+  geom_hline(yintercept = 1, color = "orangered") +
+  geom_point(position = position_jitter(width = 0.1), alpha = 0.8) +
+  scale_y_log10() + coord_flip()
+```
+
+```{r}
+cd4_preliminary_comparison_l2 %>%
+  ggplot(aes(x = L2, y = perturbation_change, color = Condition)) + 
+  geom_hline(yintercept = 1/length(unique(cd4_preliminary_comparison_l2$L2)), color = "orangered") +
+  geom_point(position = position_jitter(width = 0.1), alpha = 0.8) +
+  scale_y_log10() + coord_flip()
+```
+
+```{r}
+cd4_preliminary_comparison_l3 <- cd4_preliminary_comparison %>% 
+  filter(Level == "L3") %>%
+  group_by(Patient_ID, Condition) %>%
+  mutate(fold_change = ((n_final + 1) / sum_all_final) /   ((n_preliminary + 1) / sum_all_preliminary),
+         perturbation_change = fold_change / sum(fold_change))
+
+cd4_preliminary_comparison_l3 %>%
+  ggplot(aes(x = L3, y = fold_change, color = Condition)) + 
+  geom_hline(yintercept = 1, color = "orangered") +
+  geom_point(position = position_jitter(width = 0.1), alpha = 0.8) +
+  scale_y_log10()  + coord_flip()
+
+
+```
+
+```{r}
+cd4_preliminary_comparison_l3 %>%
+  ggplot(aes(x = L3, y = perturbation_change, color = Condition)) + 
+  geom_hline(yintercept = 1/length(unique(cd4_preliminary_comparison_l3$L3)), color = "orangered") +
+  geom_point(position = position_jitter(width = 0.1), alpha = 0.8) +
+  scale_y_log10() + coord_flip()
+```
+
+```{r}
+# cd4_all_prop_with_preliminary %>% group_by(Patient_ID, Condition, isPreliminary) %>% summarise(n_samps = length(unique(Sample_ID))) %>%
+#   filter(n_samps > 1)
+# 
+# cd4_all_prop_with_preliminary %>% group_by(Sample_ID) %>% summarise(n_samps = length(unique(paste0(Patient_ID, Condition, isPreliminary, sep = "___")))) %>%
+#   filter(n_samps > 1)
+
+
+cd4_for_calibration_model <- cd4_all_prop_with_preliminary %>%
+  mutate(PatientDesc = paste(Patient_ID, Condition, sep = "___"),
+         isFinal = as.numeric(!isPreliminary)) %>%
+  group_by(PatientDesc) %>%
+  filter(any(isPreliminary)) %>%
+  ungroup() 
+
+# fit_cd4_calibration <- brm(bf(n ~ offset(-log(sum_all / 1000)) + PatientDesc*L3 + isFinal * L3, 
+#                   shape ~ L2 + (1 | L3)), 
+#                data = cd4_for_calibration_model, 
+#                control = list(adapt_delta = 0.95),
+#                family = negbinomial(),
+#                file = here::here("stored_fits/cd4_calibration.rds"),
+#                file_refit = "on_change")
+```
+
+
+```{r}
+cd4_test <- cd4_for_calibration_model %>% filter(L3 == "Naive1", Level == "L3") %>% 
+  uncertainty_fold_change_group()
+```
+
+
+```{r}
+#cd4_test <- cd4_for_calibration_model %>% filter(L2 == "Unconventional", Level == "L2")
+cd4_test <- cd4_for_calibration_model %>% filter(L3 == "Naive1", Level == "L3")
+cd4_test <- cd4_test %>% mutate(AgeStd = (10 - Age)/5)
+fit_calibration <- MASS::glm.nb(n ~ offset(-log(sum_all / 1000)) + PatientDesc + isFinal, data = cd4_test)
+plot(fit_calibration)
+confint(fit_calibration)
+fit_calibration$theta
+fit_calibration$SE.theta
+
+cd4_test %>% mutate(fitted = fitted(fit_calibration), residuals = residuals(fit_calibration)) %>%
+  ggplot(aes(x = fitted, y = residuals, group = PatientDesc))  + geom_line() + geom_point(aes(color = as.factor(isFinal))) + scale_x_log10()
+
+cd4_test %>% mutate(fitted = log(fitted(fit_calibration)), residuals = residuals(fit_calibration)) %>%
+  ggplot(aes(x = fitted, y = log(n) - log(sum_all / 1000), group = PatientDesc))  + geom_abline(slope = 1, intercept = 0, color = "lightblue", linewidth = 2) + geom_line() + geom_point(aes(color = as.factor(isFinal))) 
+
+
+cd4_test %>% mutate(fitted = log(fitted(fit_calibration)), residuals = residuals(fit_calibration)) %>%
+  filter(Condition == "Ctrl T0") %>%
+  ggplot(aes(x = fitted, y = log(n) - log(sum_all / 1000), group = PatientDesc))  + geom_abline(slope = 1, intercept = 0, color = "lightblue", linewidth = 2) + geom_line(aes(color = PatientDesc)) #+ geom_point(aes(color = as.factor(isFinal))) 
+
+```
+
+```{r}
+cd4_test %>% mutate(fitted = log(fitted(fit_calibration)), residuals = residuals(fit_calibration)) %>%
+  filter(Condition == "Ctrl T0")
+```
+
+```{r}
+library(rstanarm)
+stan_test <- rstanarm::stan_glm.nb(n ~ offset(-log(sum_all / 1000)) + PatientDesc + isFinal + isFinal:Condition + isFinal:AgeStd, data = cd4_test)
+
+stan_test_df <- tidybayes::add_predicted_rvars(cd4_test, stan_test, offset = -log(cd4_test$sum_all / 1000)) %>%
+  mutate(pred_ratio = (.prediction +  1) / sum_all) %>%
+  select(n, Condition, sum_all, isPreliminary, PatientDesc, Sample_ID, Patient_ID, pred_ratio)  %>%
+  mutate(isPreliminary = if_else(isPreliminary, "preliminary", "final")) %>%
+  pivot_wider(names_from = isPreliminary, values_from = c("Sample_ID", "n", "sum_all", "pred_ratio")) %>%
+  mutate(fold_change = ((n_final + 1) / sum_all_final) /   ((n_preliminary + 1) / sum_all_preliminary),
+         fc_rvar = pred_ratio_final / pred_ratio_preliminary,
+         low = as.numeric(quantile(fc_rvar, 0.025)), 
+         high = as.numeric(quantile(fc_rvar, 0.975)))
+
+stan_test_df %>%
+  ggplot(aes(x = PatientDesc, y = fold_change, color = Condition)) + 
+  geom_hline(yintercept = exp(fit_calibration$coefficients["isFinal"]), color = "blue") +
+  geom_hline(yintercept = 1, color = "orangered") +
+  geom_linerange(aes(ymin = low, ymax = high), alpha = 0.8) +
+  geom_point(alpha = 0.8) +
+  scale_y_log10() + coord_flip()
+```
+
+```{r}
+summary(stan_test)
+stan_test_df %>% filter(Patient_ID == 209) %>% pull(pred_ratio_preliminary) %>% posterior::draws_of() %>% hist()
+stan_test_df %>% filter(Patient_ID == 209) %>% pull(pred_ratio_final) %>% posterior::draws_of() %>% hist()
+
+stan_test %>% posterior::as_draws_rvars() %>% posterior::variables()
+hist(1 / (stan_test %>% posterior::as_draws_rvars())$reciprocal_dispersion %>% posterior::draws_of())
+```
+
+
+```{r}
+cc <- coefficients(fit_calibration)
+base <- cc["(Intercept)"] + cc["PatientDesc209___Ctrl T0"]
+base_f <- base + cc["isFinal"]
+exp(base) / 1000
+exp(base_f) / 1000
+uncertainty_fold_change_single(5.942,1316, 5.759, 611, fit_calibration$theta, fit_calibration$SE.theta)
+```
+
+
+```{r}
+hist(fold_change_with_uncertainty$sum_all_final / fold_change_with_uncertainty$sum_all_preliminary)
+```
+
+
+```{r}
+cd4_test
+```
+
 
 ## CD8
 
@@ -343,13 +566,17 @@ if(do_ppc_checks) {
 
 
 ```{r}
-loo_cd4 <- loo(fit_cd4)
+if(do_loo) {
+  loo_cd4 <- loo(fit_cd4)
+}
 ```
 
 List of highly influential observations (for the fit after removing outliers mentioned above, i.e. those are potentially still outliers):
 
 ```{r}
-cd4_l3_for_model[loo_cd4$diagnostics$pareto_k > 0.5,] %>% df_for_reading()
+if(do_loo) {
+  cd4_l3_for_model[loo_cd4$diagnostics$pareto_k > 0.5,] %>% df_for_reading()
+}
 ```
 
 
@@ -392,6 +619,31 @@ if(do_ppc_checks) {
 }
 ```
 
+
+### CD4 - idaa1c
+
+Using idaac to predict populations at time 0 to see potential differences predicting remission
+
+```{r}
+cd4_l3_for_model_idaa1c <- cd4_l3_for_model_alldata %>%
+  filter(Time == "T0") %>%
+  inner_join(clinical_data %>% filter(Time == "T0") , by = "Patient_ID", 
+             relationship = "many-to-one",
+             unmatched = "error") %>%
+  filter(Condition == "Dia T0", !is.na(idaa1c)) %>%
+  mutate(idaa1c = idaa1c - mean(idaa1c))
+
+fit_cd4_idaa1c <- brm(bf(n ~ offset(-log(sum_all / 1000)) + idaa1c + L3 + (0 + idaa1c | L2) + (0 + idaa1c | L3), 
+                  shape ~ L2 + (1 | L3)), 
+               data = cd4_l3_for_model_idaa1c, 
+               control = list(adapt_delta = 0.95),
+               iter = hmc_iters,
+               family = negbinomial(),
+               file = here::here("stored_fits/cd4_idaa1c.rds"),
+               file_refit = "on_change")
+
+fit_cd4_idaa1c
+```
 
 
 ### CD8 - outliers removed
@@ -456,13 +708,17 @@ if(do_ppc_checks) {
 
 
 ```{r}
-loo_cd8 <- loo(fit_cd8)
+if(do_loo) {
+  loo_cd8 <- loo(fit_cd8)
+}
 ```
 
 List of highly influential observation (with outliers removed, i.e. potential extra outliers)
 
 ```{r}
-cd8_l3_for_model[loo_cd8$diagnostics$pareto_k > 0.5,] %>% df_for_reading()
+if(do_loo) {
+  cd8_l3_for_model[loo_cd8$diagnostics$pareto_k > 0.5,] %>% df_for_reading()
+}
 ```
 
 
@@ -513,6 +769,32 @@ if(do_ppc_checks) {
 ```
 
 
+### CD8 - idaa1c
+
+Using idaac to predict populations at time 0 to see potential differences predicting remission
+
+```{r}
+cd8_l3_for_model_idaa1c <- cd8_l3_for_model_alldata %>%
+  filter(Time == "T0") %>%
+  inner_join(clinical_data %>% filter(Time == "T0") , by = "Patient_ID", 
+             relationship = "many-to-one",
+             unmatched = "error") %>%
+  filter(Condition == "Dia T0", !is.na(idaa1c))  %>%
+  mutate(idaa1c = idaa1c - mean(idaa1c))
+
+fit_cd8_idaa1c <- brm(bf(n ~ offset(-log(sum_all / 1000)) + idaa1c + L3 + (0 + idaa1c | L2) + (0 + idaa1c | L3), 
+                  shape ~ L2 + (1 | L3)), 
+               data = cd8_l3_for_model_idaa1c, 
+               control = list(adapt_delta = 0.95),
+               iter = hmc_iters,
+               family = negbinomial(),
+               file = here::here("stored_fits/cd8_idaa1c.rds"),
+               file_refit = "on_change")
+
+fit_cd8_idaa1c
+```
+
+
 ### Associations summary
 
 In all cases, the isDia estimates show the difference (fold change in abundance) between healthy controls and diabetics at time 0 (fold change > 1 means higher abundance in diabetics). The isT1 estimates are the difference for diabetics between time 1 and and time 0 (fold change > 1 means higher abundance at time 1).
@@ -521,31 +803,38 @@ We look separately at L2 populations relative to total, L3 populations relative 
 
 Finally we look at the dataset with outliers removed (proportion relative to total is 3SD or more above others) and the full dataset without any removals.
 
-```{r, fig.height=2.8, fig.width=6}
-plot_population_effects(get_l2_draws(fit_cd4), "CD4 - L2 relative to total")
-plot_population_effects(get_l2_draws(fit_cd4_alldata), "CD4 - L2 relative to total, no removals")
+```{r, fig.height=2.8, fig.width=8}
+plot_population_effects(get_l2_draws(fit_cd4) %>% add_diaT1_draws(), "CD4 - L2 relative to total")
+plot_population_effects(get_l2_draws(fit_cd4_alldata) %>% add_diaT1_draws(), "CD4 - L2 relative to total, no removals")
+plot_population_effects(get_l2_draws(fit_cd4_idaa1c), "CD4 - L2 relative to total, remission")
 ```
 
 ```{r, fig.width=8, fig.height=7}
-plot_population_effects(get_l3_draws(fit_cd4), "CD4 - L3 relative to parent")
-plot_population_effects(get_l3_draws(fit_cd4_alldata), "CD4 - L3 relative to parent, no removals")
+plot_population_effects(get_l3_draws(fit_cd4) %>% add_diaT1_draws(), "CD4 - L3 relative to parent")
+plot_population_effects(get_l3_draws(fit_cd4_alldata) %>% add_diaT1_draws(), "CD4 - L3 relative to parent, no removals")
+plot_population_effects(get_l3_draws(fit_cd4_idaa1c), "CD4 - L3 relative to parent, remission")
 
-plot_population_effects(get_combined_draws(fit_cd4, cd4_l3_for_model), "CD4 - L3 relative to total (combined)")
-plot_population_effects(get_combined_draws(fit_cd4_alldata, cd4_l3_for_model_alldata), "CD4 - L3 relative to total (combined), no removals")
+plot_population_effects(get_combined_draws(fit_cd4, cd4_l3_for_model) %>% add_diaT1_draws(), "CD4 - L3 relative to total (combined)")
+plot_population_effects(get_combined_draws(fit_cd4_alldata, cd4_l3_for_model_alldata) %>% add_diaT1_draws(), "CD4 - L3 relative to total (combined), no removals")
+plot_population_effects(get_combined_draws(fit_cd4_idaa1c, cd4_l3_for_model_idaa1c), "CD4 - L3 relative to parent, remission")
+
 ```
 
 
 
-```{r, fig.height=2.5, fig.width=6}
-plot_population_effects(get_l2_draws(fit_cd8), "CD8 - L2 relative to total")
-plot_population_effects(get_l2_draws(fit_cd8_alldata), "CD8 - L2 relative to total, no removals")
+```{r, fig.height=2.5, fig.width=8}
+plot_population_effects(get_l2_draws(fit_cd8) %>% add_diaT1_draws(), "CD8 - L2 relative to total")
+plot_population_effects(get_l2_draws(fit_cd8_alldata) %>% add_diaT1_draws(), "CD8 - L2 relative to total, no removals")
+plot_population_effects(get_l2_draws(fit_cd8_idaa1c), "CD8 - L2 relative to total, remission")
 ```
 ```{r, fig.width=8, fig.height=7.5}
-plot_population_effects(get_l3_draws(fit_cd8), "CD8 - L3 relative to parent")
-plot_population_effects(get_l3_draws(fit_cd8_alldata), "CD8 - L3 relative to parent, no removals")
+plot_population_effects(get_l3_draws(fit_cd8) %>% add_diaT1_draws(), "CD8 - L3 relative to parent")
+plot_population_effects(get_l3_draws(fit_cd8_alldata) %>% add_diaT1_draws(), "CD8 - L3 relative to parent, no removals")
+plot_population_effects(get_l3_draws(fit_cd8_idaa1c), "CD8 - L3 relative to parent, remission")
 
-plot_population_effects(get_combined_draws(fit_cd8, cd8_l3_for_model), "CD8 -  L3 relative to total (combined)")
-plot_population_effects(get_combined_draws(fit_cd8_alldata, cd8_l3_for_model_alldata), "CD8 -  L3 relative to total (combined), no removals")
+plot_population_effects(get_combined_draws(fit_cd8, cd8_l3_for_model) %>% add_diaT1_draws(), "CD8 -  L3 relative to total (combined)")
+plot_population_effects(get_combined_draws(fit_cd8_alldata, cd8_l3_for_model_alldata) %>% add_diaT1_draws(), "CD8 -  L3 relative to total (combined), no removals")
+plot_population_effects(get_combined_draws(fit_cd8_idaa1c, cd8_l3_for_model_idaa1c), "CD8 - L3 relative to total, remission")
 ```
 
 
